--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ body .navbar-toggler {
   --text-light: #9ca3af;
   --bg-primary: #000000;
   --bg-secondary: #1e293b;
+  --bg-tertiary: #dcdde0a1;
   --bg-dark: #020617;
   --border-color: #334155;
   --border-dark: #475569;
@@ -558,7 +559,7 @@ section {
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  background: var(--bg-secondary);
+  background: var(--bg-tertiary);
   border-radius: var(--border-radius);
   transition: var(--transition);
   cursor: pointer;
@@ -570,11 +571,12 @@ section {
   box-shadow: var(--shadow-sm);
 }
 
-.skill-item img {
-  width: 35px;
-  height: 35px;
+.skill-item svg {
+  width: 70px;
+  height: 70px;
   object-fit: contain;
-  transition: var(--transition);
+  stroke: rgba(0, 0, 0, 0.2);
+  stroke-width: 1px;
 }
 
 /* ===== PROJECTS SECTION ===== */
